; ModuleID = '/home/carl/AnghaBench/mpv/osdep/extr_glob-win.c_exists.c'
source_filename = "/home/carl/AnghaBench/mpv/osdep/extr_glob-win.c_exists.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@INVALID_FILE_ATTRIBUTES = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @exists to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @exists(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i8* %0, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = call i32* @mp_from_utf8(i32* null, i8* %5)
  store i32* %6, i32** %3, align 8
  %7 = load i32*, i32** %3, align 8
  %8 = call i64 @GetFileAttributesW(i32* %7)
  %9 = load i64, i64* @INVALID_FILE_ATTRIBUTES, align 8
  %10 = icmp ne i64 %8, %9
  %11 = zext i1 %10 to i32
  store i32 %11, i32* %4, align 4
  %12 = load i32*, i32** %3, align 8
  %13 = call i32 @talloc_free(i32* %12)
  %14 = load i32, i32* %4, align 4
  ret i32 %14
}

declare dso_local i32* @mp_from_utf8(i32*, i8*) #1

declare dso_local i64 @GetFileAttributesW(i32*) #1

declare dso_local i32 @talloc_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
